{
    "name": "Controls",
    "maps": [
        {
            "name": "CircleGame",
            "id": "84fd8cd9-d2f2-4555-8349-afe0b171b8a2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7f25d8f9-f62e-465d-bae9-0f8988c306e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Slam",
                    "type": "Button",
                    "id": "b5d9158a-996b-4e21-a80c-044a8e690b08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveTouch",
                    "type": "Value",
                    "id": "4b07fe71-8fed-4d5d-b289-619dbb09bdb1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SlamTouch",
                    "type": "Button",
                    "id": "759aa334-0513-4574-b088-8284ee78466c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15844a42-eaee-4f63-aa27-a62f2abe1d3b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9245e91-b551-43ea-9881-fe830e5cd9ce",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20b9723f-036c-4993-b722-a85370774512",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bd086c0-5cbc-4d4e-9e47-5d57cb5e313e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfdf6594-7e1c-482a-8c74-b5975e1809db",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a99f2a4-f721-4550-b7a1-6c62a8148f33",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlamTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HighwayGame",
            "id": "f1a22389-32ba-4677-90b9-26a1258a3790",
            "actions": [
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "d6ef2e90-2c78-4c69-b421-0d455b13c77f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "845025b3-a0be-4738-98ce-58d7f27e1a7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "d98792d8-c9c5-4e1c-80e4-406d605804b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane4",
                    "type": "Button",
                    "id": "df3030d3-255d-40d5-9126-fa4246ff3573",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane5",
                    "type": "Button",
                    "id": "e43b8758-bb62-45eb-9cd4-c7f172165042",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33eed3d7-a1d8-4caf-abca-68b8155a37c4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a18fecd5-2e4f-47b3-97a7-e4c72696d0bb",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98c58a3d-fc69-4383-b7c9-6985b8105248",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2f12da9-91f1-43a8-aac4-3f142a0aa795",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e908b2b2-b86d-4e3d-9d1c-3f0554405f2a",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MarchingGame",
            "id": "b6794a5d-c8fa-4bf1-bbc6-04aefb049090",
            "actions": [
                {
                    "name": "BeatUp",
                    "type": "Button",
                    "id": "0b5e2db3-31be-4590-b70a-9b08a03cf674",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BeatDown",
                    "type": "Button",
                    "id": "e20dbaa0-e4aa-4c43-b590-93589430f35a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GestureStart",
                    "type": "Button",
                    "id": "52d9a979-b744-4461-9484-f19a5400a30c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GestureInput",
                    "type": "Value",
                    "id": "66e97661-9b7c-485b-87bf-eb12e220a5d7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WandInput",
                    "type": "Value",
                    "id": "3e460f27-5e00-4b08-bf05-d5f321dcd152",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9aa9c8bd-be5a-4383-8b3b-bef3971a5494",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeatUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99a85a45-b95b-49b9-b383-79028efdc9e0",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeatUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e74b23ca-a945-4c22-9388-7bb2272b5e09",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeatDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aa706a6-0279-4dc7-93d5-2b682c9d77d8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeatDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b8ccb98-8524-4eb1-b331-169ab7bbf83d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GestureStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb199316-0a82-4ab5-b855-63937dbf0875",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GestureInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d9c104c-788b-4dab-b476-5e6058680501",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WandInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c26435e4-59a6-4ffa-9be8-bf4bb184cb54",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WandInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DDRGame",
            "id": "c3757fc2-a687-42ae-a2ce-6d54a434759e",
            "actions": [
                {
                    "name": "OuterLeft1",
                    "type": "Button",
                    "id": "894ac557-47c1-4be0-8b2e-7e2e38ea6101",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InnerLeft2",
                    "type": "Button",
                    "id": "a447ca56-8b74-4623-ac58-7490ddbfc3df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InnerRight3",
                    "type": "Button",
                    "id": "0f04df6d-eb22-4c94-b19f-1b2b6faa0576",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OuterRight4",
                    "type": "Button",
                    "id": "964e1cd7-2696-4b11-9cc2-ae0408f8dd28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9cec9d8-0805-4a97-88e0-b6da0f75f0bc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf712bb0-b08f-4d87-8f27-cc7e0ba3e70c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e16ba1c-8769-4621-b196-4ee885cad6a4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7452187-5079-44dc-be29-bb69b78c3df3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb788d61-e4f5-4e8b-a93b-1bd834ea5073",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52c1ac6b-f6b9-4e5f-bf19-8dde9f681efc",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa8c1b8b-f1ca-45f7-b759-822fc22c471c",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84bbe8fb-4b1a-4eee-8384-c58568a0612e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a17ea39f-c3a8-4770-9ae9-08f441ed4fa8",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterLeft1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "639decf8-4b2b-400d-948a-f294e95bd040",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InnerLeft2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a04c31b-cdf5-4e99-81d3-c38085944e59",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InnerRight3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00a438e9-341f-4621-b074-21161be70435",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e7ec00f-dccc-4db0-a450-738ff0cef1e1",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f04d8a82-88e8-4db0-b8be-defeddbe5b8c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7761876-749f-4d1e-999d-4f4a10a6c5a7",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c302d456-7e7c-4e63-91fa-8490ad11c440",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc8fd73e-3519-4893-a0f3-3bd312831c7d",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b8eb3e5-f8ef-4dcb-b5fd-0e9874215d68",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bf309b4-4467-4831-83e9-0b0ccdec3be4",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39c5bd8f-5b60-4e73-b7d8-dfa24160a5c7",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OuterRight4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9160faf9-d9aa-4f83-b2fd-2c91d2a289b7",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "083b3f7d-b8d2-475c-b8a3-0d3d75718904",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81ee0bf3-335a-42ad-aab6-2356d4f7cce0",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e507a1c-7636-40ff-bb21-dcaae86107b1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18bd16a5-6009-45b4-ae2d-04ec7c351f52",
                    "path": "<Keyboard>/pause",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb36caa-d4b6-483e-b1cb-90c340b5496d",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5061951-e6e0-4f44-a835-17a6e4900469",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}