using System.IO;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

/// <summary>
/// Unusued class that was used to load a song from the menu
/// </summary>
public class MenuSongButtonManager : MonoBehaviour
{
    /// <summary>
    /// Store the game type to load the level with
    /// </summary>
    private enum TempGameType
    {
        CircleGame,
        HighwayGame,
        MarchingGame,
        BongoGame
    }
}
